--- a/style.css
+++ b/style.css
@@ -29,6 +29,43 @@ body {
     border-radius: 3px;
 }
 
+.money-div {
+    border: 10px solid white;
+    float: left;
+    background-color: rgb(245, 239, 239);
+    text-align: center;
+    padding: 20px;
+    padding-left: 20px;
+    display: flex;
+    width: 100%;
+    margin: 0%;
+    border: 10px;
+    border-radius: 15px;
+    border-color: aqua;
+
+
+
+
+
+}
+
+#div-color {
+    background-color: lightcoral;
+    border: 5px;
+    border-color: brown;
+}
+
+
+
+
+
+
+
+
+.display-flex {
+    display: flex;
+}
+
 .footer {
     text-align: center;
     padding: 15px 50px;
