--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0%;
 }
 
+.text-align {
+    text-align: center;
+}
+
 
 
 .header {
@@ -45,9 +49,10 @@ body {
     border-radius: 15px;
     border-color: aqua;
 
+}
 
-
-
+.money-div:hover {
+    border: 1px solid gray;
 
 }
 
@@ -113,6 +118,23 @@ body {
     margin-left: 10px;
     margin-right: 5px;
 
+}
+
+.gallery {
+    margin-top: 20px;
+    margin: 10px;
+    border: 1px solid gray;
+    float: left;
+    width: 200px;
+}
+
+.gallery:hover {
+    border: 1px solid gray;
+}
+
+.gallery img {
+    width: 100%;
+    height: auto;
 }
 
 .subscribe {
